fix: validation errors compatibility with frontend